demo reports update

--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -19,17 +19,47 @@ format:
 
 Контакты клиентской службы: [subscribe\@pbc-index.ru](mailto:subscribe@pbc-index.ru)
 
+### Российский уголь
+
+[Рынок угля и влияющих отраслей (ежеквартально)](/reports/2023-09 ЦЦИ Квартальный отчет Рынок угля и влияющие отрасли.pdf)
+
+[Цена экспортной альтернативы угля в России (ежеквартально)](reports/2024-02 PBС Quarterly Coal NB.pdf)
+
+[Экспортные цены на уголь в России (еженедельно)](reports/2024-04-08 PBC Weekly Coal.pdf)
+
+[Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
+
+
+### Российская нефть
+
+[Российский рынок нефти: добыча и экспорт (раз в 2 недели)](reports/2024-04-03 Weekly GPB Crude RU.pdf)
+
+[Российский рынок нефтепродуктов: бензин (раз в 2 недели)](reports/2024-04-11 PBC Weekly OilProducts Gasoline.pdf)
+
+[Российский рынок нефтепродуктов: дизель (раз в 2 недели)](reports/2024-04-26 PBC Weekly OilProducts Diesel RU.pdf)
+
+[Цены и дифференциалы на российскую нефть (раз в 2 недели)](reports/По каким ценам Россия продает нефть.pdf)
+
+### Российский газ
+
+[Экспортные цены на газ в России (ежемесячно)](reports/2024-02 PBC Monthly Gas.pdf)
+
+[Опрос профессиональных аналитиков: Газ (ежеквартально)](reports/2024-02 PBC Quarterly Gas Consensus.pdf)
+
+[Обзор зарубежных рынков газа (ежеквартально)](reports/2024-02 PBC Quarterly Gas.pdf)
+
+
 ### Морской фрахт
 
 [Перевозки нефти. Ставки фрахта (еженедельно)](/reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf)
 
 [Перевозки нефтепродуктов. Ставки фрахта (еженедельно)](/reports/2024-07-17%20PBC%20Weekly%20OilProduct%20Freight.pdf)
 
-[Перевозки зерна. Ставки фрахта (еженедельно)](/reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf)
+[Перевозки зерна. Ставки фрахта (еженедельно)](reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf)
 
-[Перевозки угля. Ставки фрахта (еженедельно)](/reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
+[Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
 
-[Морская контейнерная логистика (ежемесячно)](/reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf)
+[Морская контейнерная логистика (ежемесячно)](reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf)
 
 [Морская контейнерная логистика - флот (ежемесячно)](/reports/2024-07%20PBC%20Montly%20Container%20Fleet.pdf)
 
@@ -54,8 +84,11 @@ format:
 
 [Азотные удобрения (еженедельно)](reports/2024-09-23%20ЦЦИ%20Азотные%20удобрения.pdf)
 
-### Метанол
+### Химия
 
 [Цены на метанол в России (ежемесячно)](reports/2024-06 PBC Monthly Methanol.pdf)
 
 [Цены на ароматические углеводороды и их производные в России (еженедельно)](reports/2024-07-18 PBC Weekly Aromatics.pdf)
+
+
+
