--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+1,8 п.]{.my-custom-class style="color:#44bf78;"}** ([**+1,7 п.**]{.my-custom-class style="color:#44bf78;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+1,9 п.]{.my-custom-class style="color:#44bf78;"}** ([**+5,2 п.**]{.my-custom-class style="color:#44bf78;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: подсолнечное масло [**+6,5%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**+5,3%**]{.my-custom-class style="color:#44bf78;"}
+Наибольшие изменения цен товаров за неделю: нефть [**+5,5%**]{.my-custom-class style="color:#44bf78;"}, нефтепродукты [**+4,0%**]{.my-custom-class style="color:#44bf78;"}
 
-Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**+0,5 п.**]{.my-custom-class style="color:#44bf78;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**+1,7 п.**]{.my-custom-class style="color:#44bf78;"}, нефтепродукты [**+0,2 п.**]{.my-custom-class style="color:#44bf78;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
