--- a/index.qmd
+++ b/index.qmd
@@ -46,10 +46,10 @@ format:
 
 [Подробнее →](pbc-index.qmd)
 
-**07.10.2024 Пшеница**
+**14.10.2024 Пшеница**
 
+Экспортные цены на пшеницу за неделю выросли на 3 долл. Алжир исключил французские компании из участия в тендере по закупкам пшеницы. Reuters сообщает, что Минсельхоз РФ рекомендовал минимальную экспортную цену на пшеницу для международных тендеров - не ниже 250 долл./т FOB.
 
-Экспортные цены на пшеницу за неделю выросли на 9 долл. Турция смягчила запрет на импорт пшеницы.
 
 [Подробнее →](markets/markets-wheat.qmd)
 :::
