--- a/markets/markets-sea-freight.qmd
+++ b/markets/markets-sea-freight.qmd
@@ -13,7 +13,7 @@ format:
 
 ![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
 
-::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
@@ -25,11 +25,11 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*09.10.2024 Перевозки нефтепродуктов*
+*16.10.2024 Перевозки нефтепродуктов*
 
-**Фрахт светлых нефтепродуктов обновляет минимумы**
+**Светлый и темный фрахт все дальше отдаляется друг от друга**
 
-Ставки фрахта на перевозку светлых нефтепродуктов упали и обновили годовой минимум. Перевозка темных нефтепродуктов стала премиальной, поэтому "светлый" флот может переориентироваться на мазут и битум".
+Ставки фрахта на перевозку светлых нефтепродуктов остаются на минимальных уровнях, темные ставки начали восстанавливаться и выросли на всех отслеживаемых маршрутах. Эскалация конфликта на Ближнем Востоке ускоряет приближение сезонного роста.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -41,11 +41,12 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*01.10.2024 Перевозки угля*
+*15.10.2024 Перевозки угля*
 
-**Не везет: железная дорога сдерживает фрахт в портах Запада**
+**Уголь преткновения: фрахту нужны поставки на Восток**
 
-Стоимость перевозки угля из Усть-Луги упала из-за ограничений железнодорожных перевозок в западном направлении.
+Стоимость перевозки угля балкерами класса Handysize (40 тыс. т) из порта Восточный в Северный Китай осталась без изменений.
+
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 :::
@@ -81,9 +82,9 @@ hc
 
 [Материалы →](../events/2024-09-13-crude.qmd)
 :::
-:::::
+:::
 
-::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Методология
 
@@ -94,4 +95,4 @@ hc
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 :::
-:::::
+:::
