--- a/methodology/methodology-consensus-pbc.qmd
+++ b/methodology/methodology-consensus-pbc.qmd
@@ -6,13 +6,13 @@ title-block-banner: none
 fig-format: svg
 ---
 
-# Методология консенсус-прогноза \[Опрос профессиональных аналитиков\]
+# Методология консенсус-прогноза (Опрос профессиональных аналитиков)
 
 ## Основные положения
 
 ### Введение
 
-Данная методология подробно описывает принципы работы Центра ценовых индексов при формировании консенсус прогнозов макроэкономических индикаторов опроса профессиональных аналитиков.
+Данная методология подробно описывает принципы работы Центра ценовых индексов при формировании консенсус-прогнозов индикаторов опроса профессиональных аналитиков.
 
 Основной целью Центра ценовых индексов является публикация достоверных и репрезентативных консенсус-прогнозов, отражающих ожидания профессионального сообщества.
 
@@ -57,9 +57,7 @@ fig-format: svg
 
 Результаты опроса представляются в агрегированном и обезличенном виде.
 
-Для каждого из представленных в
-
-опросе макроэкономического индикатора публикуются следующие агрегированные данные: медиана, выборочное среднее, максимум и минимум, 25% и 75%- перцентили. Обработка данных прогноза осуществляется методологической группой независимой методологической группой.
+Для каждого из представленных в опросе индикатора публикуются следующие агрегированные данные: медиана, выборочное среднее, максимум и минимум, 25% и 75%- перцентили. Обработка данных прогноза осуществляется методологической группой независимой методологической группой.
 
 Медиана – серединное значение ответов респондентов, 50% ответов больше или равны медиане, другие 50% ответов меньше или равны медиане.
 
@@ -73,7 +71,7 @@ fig-format: svg
 
 ### Корректировка данных
 
-В случае необходимости исправления ошибочного значения консенсуспрогноза, возникшего вследствие технических сбоев, человеческой ошибки или некорректного применения принятой методологии, Центр ценовых индексов оставляет за собой право скорректировать данные.
+В случае необходимости исправления ошибочного значения консенсус-прогноза, возникшего вследствие технических сбоев, человеческой ошибки или некорректного применения принятой методологии, Центр ценовых индексов оставляет за собой право скорректировать данные.
 
 Данные также могут быть скорректированы в случае исправления ошибок, возникших в результате сообщения участниками опроса неточной информации.
 
@@ -81,9 +79,9 @@ fig-format: svg
 
 Методологии разрабатываются и утверждаются независимым от блока оценки методологическим комитетом, который состоит из сотрудников, обладающих достаточным уровнем квалификации и профессиональным опытом.
 
-В целях обеспечения актуальности, осуществляется ежегодная оценка соответствия методологии, необходимости упразднения неактуальных или создания новых макроэкономических индикаторов.
+В целях обеспечения актуальности, осуществляется ежегодная оценка соответствия методологии, необходимости упразднения неактуальных или создания новых индикаторов.
 
-Центр ценовых индексов приветствует диалог с участниками опроса по вопросам методики, применяемой для оценки и формирования макроэкономических индикаторов. Обновление методологии подразумевает подробное объяснение предлагаемых изменений и их обоснование.
+Центр ценовых индексов приветствует диалог с участниками опроса по вопросам методики, применяемой для оценки и формирования индикаторов. Обновление методологии подразумевает подробное объяснение предлагаемых изменений и их обоснование.
 
 Об изменении сообщается в соответствующем информационном продукте, также указывается дата, с которой изменения вступают в силу.
 
@@ -91,7 +89,7 @@ fig-format: svg
 
 Центр ценовых индексов документирует и хранит:
 
--   Исходные данные, используемые при формировании консенсус прогноза;
+-   Исходные данные, используемые при формировании консенсус-прогноза;
 -   Дополнительные сведения, предоставляемые респондентами в рамках регулярных опросов.
 -   Методологии, используемые при формировании консенсус-прогноза;
 -   Результаты агрегированных данных консенсус-прогноза в соответствие с данной методологией.
@@ -101,28 +99,3 @@ fig-format: svg
 Центр ценовых индексов придает большое значение обеспечению безопасности и защите информации, а также гарантирует полную конфиденциальность данных, получаемых от участников опроса.
 
 В списке участников опроса указываются только регулярно участвующие и отдельно подтвердившие свое согласие в данной форме аналитики.
-
-## Спецификация
-
-Макроэкономиечские индикаторы и их характеристики
-
-| Показатель                                  | Ед.                     | Формат              | Характеристика                                                                                                                                                                          |
-|---------------------------------------------|-------------------------|---------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Темп прироста реального ВВП                 | \% г/г                  | За период           | Изменение реального ВВП к соответствующему периоду предыдщуего года, выраженное в процентах прироста                                                                                    |
-| Индекс потребительских цен                  | \% г/г                  | На конец периода    | Изменение индекса потребительских цен Росстата к соответствющему периоду предыдущего года (инфляция), выраженное в процентах прироста                                                   |
-| Ключевая ставка Банка России                | \%                      | На конец периода    | Ключевая ставка Банка России в последний рабочий день рассматриваемого периода, выраженная в процентах годовых                                                                          |
-| Бескупонная доходность ОФЗ 10 лет           | \%                      | На конец периода    | Бескупонная доходность десятилетних ОФЗ в последний день торгов рассматриваемого периода, выраженная в процентах годовых                                                                |
-| Цена на нефть марки Brent                   | долл./барр.             | В среднем за период | Средняя за период цена нефти Dated Brent, выраженная в долларах за баррель.                                                                                                             |
-| Дисконт российской нефти к Brent            | долл./барр.             | В среднем за период | Средний дифференциал в цене продажи российской нефти на экспорт по отношению к цене марки Dated Brent, выраженный в долларах за баррель.                                                |
-| USD/RUB                                     | руб./долл.              | На конец периода    | Курс российского рубля к доллару США в последний рабочий день месяца, выраженный в рублях за доллар США.                                                                                |
-| USD/CNY (CNY/RUB)                           | юан./долл. (руб./долл.) | На конец периода    | Курс китайского юаня в последний рабочий день месяца, выраженный в китайских юанях за доллар США (российских рублях за китайский юань).                                                 |
-| EUR/USD (EUR/RUB)                           | долл./евро (руб./евро)  | На конец периода    | Курс евро в последний рабочий день месяца, выраженный в долларах США за евро (российских рублях за евро).                                                                               |
-| USD/TRY (TRY/RUB)                           | лир./долл. (руб./лир.)  | На конец периода    | Курс турецкой лиры в последний рабочий день месяца, выраженный в лирах за доллар США (российских рублях за турецкую лиру).                                                              |
-| USD/INR (INR/RUB)                           | руп./долл. (руб./руп.)  | На конец периода    | Курс индийской рупии в последний рабочий день месяца, выраженный в индийских рупиях за доллар США (российских рублях за индийскую рупию).                                               |
-| Ставка ФРС (upper bound federal funds rate) | \%                      | На конец периода    | Верхняя граница целевого коридора Federal Funds rate в последний рабочий день рассматриваемого периода, выраженная в процентах годовых.                                                 |
-| Ставка ЕЦБ (main refinancing rate)          | \%                      | На конец периода    | Ставка кредитования банков в Европейском Центральном банке (1 неделя) - Main refinancing rate в последний рабочий день рассматриваемого периода, выраженная в процентах годовых.        |
-| Ставка кредитования НБК на 1 год (MLF)      | \%                      | На конец периода    | Ставка кредитования банков в Народном банке Китая (3-12 месяцев) - Medium Term Lending Facility Rate в последний рабочий день рассматриваемого периода, выраженная в процентах годовых. |
-
-### Сроки проведения опроса
-
-Ежемесячно
