--- a/methodology/specs-freight.qmd
+++ b/methodology/specs-freight.qmd
@@ -15,7 +15,7 @@ fig-format: svg
 Параметры типовой сделки
 
 | Основные параметры сделки | Танкер класса Aframax)                                                                                            | Танкер класса Suezmax                                                                                             |
-|---------------|-----------------------------|-----------------------------|
+|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
 | Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
 | Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
 | Партия, т                 | 100 000                                                                                                           | 135 000                                                                                                           |
@@ -54,7 +54,7 @@ fig-format: svg
 Параметры типовой сделки
 
 | Основные параметры сделки | Светлые нефтепродукты (Clean Petroleum Products, CPP)                                                             | Темные нефтепродукты (Dirty Petroleum Products, DPP)                                                              |
-|---------------|-----------------------------|-----------------------------|
+|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
 | Тип танкера               | Танкер класса Handysize                                                                                           | Танкер класса Handysize                                                                                           |
 | Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
 | Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
@@ -101,7 +101,7 @@ fig-format: svg
 Параметры типовой сделки
 
 | Основные параметры сделки | Балкер класса Coaster                                                                                             | Балкер класса Handysize                                                                                           | Танкер класса Supramax                                                                                            |
-|---------------|-------------------|-------------------|-------------------|
+|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
 | Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
 | Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
 | Партия, т                 | 5 000                                                                                                             | 32 000                                                                                                            | 60 000                                                                                                            |
@@ -140,13 +140,13 @@ fig-format: svg
 
 Параметры типовой сделки
 
-| Основные параметры сделки | Балкер класса Panamax                                                                                             | Балкер класса Handysize                                                                                           |
-|---------------|-----------------------------|-----------------------------|
-| Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
-| Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
-| Партия, т                 | 80 000                                                                                                            | 40 000                                                                                                            |
-| Условия оплаты            | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          |
-| Вторая сторона сделки     | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         |
+| Основные параметры сделки | Балкер класса Capesize                                                                                            | Балкер класса Panamax                                                                                             | Балкер класса Handysize                                                                                           |
+|---------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------|
+| Тип сделки                | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               | Спотовые сделки (разовая перевозка)                                                                               |
+| Срок действия ставки      | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете | 3 недели с момента публикации ставки при условии заключения договора на перевозку на неделе, описываемой в отчете |
+| Партия, т                 | 180 000                                                                                                           | 80 000                                                                                                            | 40 000                                                                                                            |
+| Условия оплаты            | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          | Типовые, без рассрочки, без привязки к другим контрактам                                                          |
+| Вторая сторона сделки     | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         | Надежный контрагент, кредитоспособность которого не подвергается сомнению                                         |
 
 Типовые направления перевозок Ставки фрахта при перевозках угля оцениваются по следующим направлениям перевозок:
 
