--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -2,15 +2,16 @@
 title: "Макроконсенсус"
 sidebar: false
 format:
-   html: 
-     page-layout: custom
-     grid:
-      body-width: 800px
+   html:
+      html-table-processing: none
+      page-layout: custom
+      grid:
+         body-width: 800px
 ---
 
 # ![](../images/icon-consensus-macro.svg) Макроконсенсус ЦЦИ {.my-custom-class style="margin-left:3%;"}
 
-::::::::: grid
+::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 **Макроконсенсус ЦЦИ** -- ежемесячный опрос профессиональных аналитиков по макроэкономике об их прогнозах относительно наиболее вероятного сценария развития экономики на горизонте 2-х лет в части ВВП, процентных ставок и курсов валют.
 :::
@@ -19,11 +20,18 @@ format:
 ## Результаты опроса: сентябрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
+library(kableExtra)
 library(knitr)
-library(rhandsontable)
+#library(rhandsontable)
 library(openxlsx)
 df <- read.xlsx('../xls/ЦЦИ Макроконсенсус.xlsx', sheet = 1)
-rhandsontable(df, digits=1, rowHeaders = FALSE, width = 1200, height = 400)
+
+df %>%
+   kbl() %>%
+   kable_styling(bootstrap_options = "hover")
+
+# kable(df, format='html', table.attr = "class = \"consensus-table\"", digits=1, lable = TRUE) %>%
+#   row_spec(0, color = "#1A4AFC", background = "white", font_size = "larger", bold = TRUE, align = "right")
 ```
 
 \*Актуальные даные и скрытые значения доступны по [подписке](../subscribe.qmd)
@@ -31,9 +39,7 @@ rhandsontable(df, digits=1, rowHeaders = FALSE, width = 1200, height = 400)
 \*\*В скобках указаны значения предыдущего опроса
 :::
 
-
-:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
-
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
 Последнее повышение ключевой ставки до 19% и жесткий сигнал Банка России на будущие решения сместили ожидания консенсуса в пользу повышения ставки до 20% в пике цикла (было 18%). Альтернативные варианты широко не распространены (19% - 1 из 13 аналитиков). Прогноз по инфляции изменился менее значительно, но все также предполагает, что цель в 4% не будет достигнута в 2025 г. (консенсус – 5%).
@@ -43,10 +49,9 @@ rhandsontable(df, digits=1, rowHeaders = FALSE, width = 1200, height = 400)
 Оценка дисконта цен на российскую нефть аналитиками сокращается до 10 долл./барр. на прогнозном периоде 2025 г., но это не «перекрывает» эффект от ожидаемого снижения мировых цен на нефть.
 
 Темпы смягчения монетарных политик ФРС и ЕЦБ пересматриваются. Консенсус ожидает более быстрого снижения ставок после последнего решения ФРС о снижении сразу на 0,5 п.п. (первое после начала цикла в 2022 г.).
-::::
+:::
 
-
-:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ::: {style="text-align: right"}
 ## Консенсус-прогноз курса юаня
 
@@ -56,7 +61,7 @@ library(tidyr)
 library(highcharter)
 library(xts)
 
-df = read.xlsx('../xls/CNYRUB_macroconsensus.xlsx', sheet = 1, detectDates = TRUE)
+df = read.xlsx('../xls/ЦЦИ Макроконсенсус.xlsx', sheet = 2, detectDates = TRUE)
 df_cnyrub_last = df[1,]
 df_cnyrub_prev = df[2,]
 df_cnyrub_range = df[3:4,]
@@ -86,36 +91,27 @@ hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"М
 hc
 ```
 :::
-::::
-
+:::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 14 профессиональных аналитика, 12 из них дали согласие на раскрытие информации об их участии в опросе
+В опросе приняли участие 14 профессиональных аналитиков, 12 из них дали согласие на раскрытие информации об их участии в опросе
 
-+--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 | <!-- -->                                               | <!-- -->                                                  | <!-- -->                                         |
-+========================================================+===========================================================+==================================================+
+|------------------------|--------------------------|----------------------|
 | Акиндинова Наталья ("Центр Развития" НИУ ВШЭ)          | Васильев Михаил (Совкомбанк)                              | Куликов Дмитрий (АКРА)                           |
-+--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 | Байкова Анастастия, Мурашов Cтанислав (Райффайзенбанк) | Виноградов Артем, Попов Юрий (Сбербанк КИБ)               | Полевой Дмитрий (Астра управление активами)      |
-+--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 | Бирюков Павел (Газпромбанк)                            | Жирнов Григорий                                           | Попов Денис (Промсвязьбанк)                      |
-+--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 | Вайсберг Валерий (ИК РЕГИОН)                           | Клепач Андрей (ВЭБ.РФ)                                    | Салихов Марсель (Институт энергетики и финансов) |
-+--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 |                                                        | *2 участника не подтвердили согласие на раскрытие данных* |                                                  |
-+--------------------------------------------------------+-----------------------------------------------------------+--------------------------------------------------+
 :::
 
-
-:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ::: {style="text-align: left"}
 ## Методология
 
 [Методология макроконсенсуса](../methodology/methodology-consensus-pbc.qmd)
 :::
-::::
-
-:::::::::
+:::
+:::
