--- a/forecasts/forecast-gas.qmd
+++ b/forecasts/forecast-gas.qmd
@@ -1,5 +1,113 @@
 ---
 title: "Газ"
+sidebar: false
+format:
+   html:
+      html-table-processing: none
+      page-layout: custom
+      grid:
+         body-width: 800px
 ---
 
-Прогноз 
+# ![](../images/icon-consensus-gas.svg) Опрос профессиональных аналитиков: рынок газа {.my-custom-class style="margin-left:3%;"}
+
+::::::::::: grid
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
+**Опрос профессиональных аналитиков: рынок газа** -- ежеквартальный опрос профессиональных аналитиков по рынку природного газа об их прогнозах относительно наиболее вероятного сценария развития рынка на горизонте 2-х лет.
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
+## Результаты опроса: сентябрь 2024 г.
+
+```{r, warning = FALSE, echo = FALSE, message = FALSE}
+library(kableExtra)
+library(knitr)
+#library(rhandsontable)
+library(openxlsx)
+library(scales)
+df <- read.xlsx('../xls/ЦЦИ Газовый консенсус.xlsx', sheet = 1)
+
+df %>%
+   kbl() %>%
+   kable_styling(bootstrap_options = "hover")
+
+# kable(df, format='html', table.attr = "class = \"consensus-table\"", digits=1, lable = TRUE) %>%
+#   row_spec(0, color = "#1A4AFC", background = "white", font_size = "larger", bold = TRUE, align = "right")
+```
+
+\*Актуальные даные и скрытые значения доступны по [подписке](../subscribe.qmd)
+
+\*\*В скобках указаны значения предыдущего опроса
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+## Основные наблюдения
+
+Аномальная жара летом в России привела к пересмотру аналитиками прогноза по добыче газа в России в 2024 г. вверх.
+
+Лишь 2 аналитика предполагают, что экспорт российского трубопроводного газа в 2025 г. снизится относительно 2024 г., т.е. считают, что транзит российского газа через Украину прекратится либо сильно упадет.
+
+Большинство аналитиков сейчас уверены, что в 2025-2026 гг. азиатская премия на рынке укрепится. Это говорит о низких ожиданиях возобновления потребления газа в Европе в краткосрочной перспективе.
+:::
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+::: {style="text-align: right"}
+## Консенсус-прогноз спотовой цены Henry Hub
+
+```{r, warning = FALSE, echo = FALSE, message = FALSE}
+library(openxlsx)
+library(tidyr)
+library(highcharter)
+library(xts)
+
+df = read.xlsx('../xls/ЦЦИ Газовый консенсус.xlsx', sheet = 2, detectDates = TRUE)
+df_last = df[1,]
+df_prev = df[2,]
+df_range = df[3:4,]
+names(df_last)[1] <- "index"
+names(df_prev)[1] <- "index"
+df_last <- df_last %>% pivot_longer(!index, names_to = "date", values_to = 'value')
+df_last$date <- as.Date(df_last$date)
+df_last$index = 'Среднее'
+df_prev <- df_prev %>% pivot_longer(!index, names_to = "date", values_to = 'value')
+df_prev$date <- as.Date(df_prev$date)
+df_prev$index = 'Среднее, (пред.опрос)'
+df_range <- df_range %>% pivot_longer(-X1, names_to = "date", values_to = 'value')
+df_range$date <- as.Date(df_range$date)
+
+hc <- highchart() %>% 
+   hc_xAxis(type = "datetime") %>%
+   hc_yAxis(title  = list(text = 'долл. млн/БТЕ'), max = 3.5, min = 1) %>% 
+   hc_plotOptions(area = list(stacking = 'normal')) %>%
+   hc_add_series(df_range, hcaes(x = date, y = round(value,2), group = X1), type = 'area', color = c('#d1e5ff','#ffffff')) %>%
+   hc_add_series(df_last, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dataLabels = TRUE) %>%
+   hc_add_series(df_prev, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dashStyle = "ShortDash")
+
+# поменять названия месяцев на русские. по умолчанию - на английском
+hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
+hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"Май",	"Июн",	"Июл",	"Авг",	"Сен",	"Окт",	"Ноя",	"Дек")
+
+hc
+```
+:::
+::::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
+## Список участников
+
+В опросе приняли участие 7 профессиональных аналитиков, 5 из них дали согласие на раскрытие информации об их участии в опросе:
+
+| <!-- --> | <!-- --> | <!-- --> |
+|------------------------|--------------------------|----------------------|
+| Белогорьев Алексей (Институт энергетики и финансов) | Клепач Андрей (ВЭБ.РФ) | Суханов Геннадий (Sber CIB) |
+| Кауфман Сергей (Финам) | Пугач Вадим (Газпромбанк) | *2 участника не подтвердили согласие на раскрытие данных* |
+:::
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::: {style="text-align: left"}
+## Методология
+
+[Методология консенсуса](../methodology/methodology-consensus-pbc.qmd)
+:::
+::::
+:::::::::::
