--- a/forecasts/forecast-realty.qmd
+++ b/forecasts/forecast-realty.qmd
@@ -1,5 +1,115 @@
 ---
 title: "Коммерческая недвижимость"
+sidebar: false
+format:
+   html:
+      html-table-processing: none
+      page-layout: custom
+      grid:
+         body-width: 800px
 ---
 
-Прогноз
+# ![](../images/icon-consensus-real-estate.svg) Опрос профессиональных аналитиков: коммерческая недвижимость {.my-custom-class style="margin-left:3%;"}
+
+::::::::::: grid
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
+**Опрос профессиональных аналитиков: коммерческая недвижимость** -- ежеквартальный опрос профессиональных аналитиков по рынку коммерческой недвижимости об их прогнозах относительно наиболее вероятного сценария развития рынка на горизонте 2-х лет.
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
+## Результаты опроса: август 2024 г.
+
+```{r, warning = FALSE, echo = FALSE, message = FALSE}
+library(kableExtra)
+library(knitr)
+#library(rhandsontable)
+library(openxlsx)
+library(scales)
+df <- read.xlsx('../xls/ЦЦИ Консенсус по недвижимости.xlsx', sheet = 1)
+
+df %>%
+   kbl() %>%
+   kable_styling(bootstrap_options = "hover")
+
+# kable(df, format='html', table.attr = "class = \"consensus-table\"", digits=1, lable = TRUE) %>%
+#   row_spec(0, color = "#1A4AFC", background = "white", font_size = "larger", bold = TRUE, align = "right")
+```
+
+\*Актуальные даные и скрытые значения доступны по [подписке](../subscribe.qmd)
+
+\*\*В скобках указаны значения предыдущего опроса
+:::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+## Основные наблюдения
+
+Отсутствие свободных складских площадей в московском регионе все выше толкает запрашиваемые ставки аренды на доступные площади. Но увеличение ставок при реализации проектов под заказчика замедлилось, что сохраняет ожидания по росту арендных ставок в 2025-2026 гг.
+
+Рост количества новых объектов будет происходить за счет проектов built-to-suit (под заказчика), что сохранит вакантность на крайне низком уровне менее 1%.
+
+Ожидания по росту средней арендной ставки на офисы класса А в Москве сохраняются на уровне менее 5% в год. Это является следствием сочетания роста ставок в центре города и сдвига структуры свободного предложения ближе к МКАД, где стоимость аренды ниже, чем в центре.
+
+Консенсус-прогноз доли свободных площадей в классе А существенно пересмотрен в сторону снижения.
+:::
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
+::: {style="text-align: right"}
+## Консенсус-прогноз доли свободных складских площадей в московском регионе
+
+```{r, warning = FALSE, echo = FALSE, message = FALSE}
+library(openxlsx)
+library(tidyr)
+library(highcharter)
+library(xts)
+
+df = read.xlsx('../xls/ЦЦИ Консенсус по недвижимости.xlsx', sheet = 2, detectDates = TRUE)
+df_last = df[1,]
+df_prev = df[2,]
+df_range = df[3:4,]
+names(df_last)[1] <- "index"
+names(df_prev)[1] <- "index"
+df_last <- df_last %>% pivot_longer(!index, names_to = "date", values_to = 'value')
+df_last$date <- as.Date(df_last$date)
+df_last$index = 'Среднее'
+df_prev <- df_prev %>% pivot_longer(!index, names_to = "date", values_to = 'value')
+df_prev$date <- as.Date(df_prev$date)
+df_prev$index = 'Среднее, (от апреля 2024)'
+df_range <- df_range %>% pivot_longer(-X1, names_to = "date", values_to = 'value')
+df_range$date <- as.Date(df_range$date)
+
+hc <- highchart() %>% 
+   hc_xAxis(type = "datetime") %>%
+   hc_yAxis(title  = list(text = '%'), max = 1.5, min = 0) %>% 
+   hc_plotOptions(area = list(stacking = 'normal')) %>%
+   hc_add_series(df_range, hcaes(x = date, y = round(value,2), group = X1), type = 'area', color = c('#d1e5ff','#ffffff')) %>%
+   hc_add_series(df_last, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dataLabels = TRUE) %>%
+   hc_add_series(df_prev, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dashStyle = "ShortDash")
+
+# поменять названия месяцев на русские. по умолчанию - на английском
+hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
+hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"Май",	"Июн",	"Июл",	"Авг",	"Сен",	"Окт",	"Ноя",	"Дек")
+
+hc
+```
+:::
+::::
+
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
+## Список участников
+
+В опросе приняли участие профессиональные аналитики 5 консалтинговых компаний, работающих в сфере коммерческой недвижимости:
+
+| <!-- --> | <!-- --> | <!-- --> |
+|------------------------|--------------------------|----------------------|
+| CMWP | IBC Real Estate | Nikoliers |
+| CORE.XP | NF Group | |
+:::
+
+:::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
+::: {style="text-align: left"}
+## Методология
+
+[Методология консенсуса](../methodology/methodology-consensus-pbc.qmd)
+:::
+::::
+:::::::::::
