--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,10 @@ format:
 
 ### Актуальное
 
+21 октября 2024. **На Cbonds стартует размещение аналитики Центра ценовых индексов **
+
+[Пресс-релиз →](events/2024-10-21-cbonds.qmd)
+
 3 октября 2024. Сырьевой индекс ЦЦИ. **Цены на российское сырье достигли минимума 2024 г.**
 
 [Мониторинг сентябрь →](pdf/2024-09-cci-index.pdf)
