--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -113,11 +113,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [+1,9 п.]{.my-custom-class style="color:#44bf78;"}** ([**+5,2 п.**]{.my-custom-class style="color:#44bf78;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-1,9 п.]{.my-custom-class style="color:#f6514c;"}** ([**+2,1 п.**]{.my-custom-class style="color:#44bf78;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефть [**+5,5%**]{.my-custom-class style="color:#44bf78;"}, нефтепродукты [**+4,0%**]{.my-custom-class style="color:#44bf78;"}
+Наибольшие изменения цен товаров за неделю: нефть [**-4,7%**]{.my-custom-class style="color:#f6514c;"}, нефтепродукты [**-6,7%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**+1,7 п.**]{.my-custom-class style="color:#44bf78;"}, нефтепродукты [**+0,2 п.**]{.my-custom-class style="color:#44bf78;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**-1,7 п.**]{.my-custom-class style="color:#f6514c;"}, нефтепродукты [**-0,3 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
